[gd_scene load_steps=4 format=3 uid="uid://dt5gn0rp3asiq"]

[ext_resource type="Texture2D" uid="uid://dl6x3dxqd2cw2" path="res://scenes/main_menu/dialogue.png" id="1_ioskq"]
[ext_resource type="Script" uid="uid://ijjjly3kfp32" path="res://scenes/intro.gd" id="1_yjqpq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yjqpq"]
bg_color = Color(0, 0, 0, 1)

[node name="Intro" type="Node2D"]
script = ExtResource("1_yjqpq")

[node name="Dialogue" type="Sprite2D" parent="."]
position = Vector2(967.5, 545)
scale = Vector2(1.4033675, 1.4010416)
texture = ExtResource("1_ioskq")

[node name="DialogueUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1933.0
offset_bottom = 1078.0

[node name="Panel" type="Panel" parent="DialogueUI"]
layout_mode = 0
offset_left = 569.0
offset_top = 960.0
offset_right = 1362.0
offset_bottom = 1084.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yjqpq")

[node name="SpeakerLabel" type="Label" parent="DialogueUI/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 5.0
offset_right = 79.0
offset_bottom = 38.0

[node name="TextLabel" type="Label" parent="DialogueUI/Panel"]
layout_mode = 0
offset_left = 68.0
offset_top = 21.0
offset_right = 779.0
offset_bottom = 107.0
